--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <!-- Authors fragment -->
     <dimen name="authors_fragment_grid_spacing">16dp</dimen>
 
     <!-- Author view -->
     <dimen name="author_view_name_text_size">14sp</dimen>
     <dimen name="author_view_name_padding">8dp</dimen>
+
+    <!-- Author details view -->
+    <dimen name="author_details_view_avatar_size">92dp</dimen>
+    <dimen name="author_details_view_padding">24dp</dimen>
 </resources>
