First version of the post detail page
Added all UI related classes
Added comment related use cases and repository

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -10,4 +10,8 @@
     <!-- Author details view -->
     <dimen name="author_details_view_avatar_size">92dp</dimen>
     <dimen name="author_details_view_padding">24dp</dimen>
+
+    <!-- Comment view -->
+    <dimen name="comment_view_padding">8dp</dimen>
+    <dimen name="comment_view_avatar_size">54dp</dimen>
 </resources>
