--- a/app/src/main/res/layout/author_details_view.xml
+++ b/app/src/main/res/layout/author_details_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -38,12 +39,16 @@
                 style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:drawablePadding="@dimen/author_view_picto_padding"
+                app:drawableStartCompat="@drawable/ic_mail"
                 tools:text="mike@example.com" />
 
             <TextView
                 android:id="@+id/authorNickNameTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:drawablePadding="@dimen/author_view_picto_padding"
+                app:drawableStartCompat="@drawable/ic_twitter"
                 tools:text="@tools:sample/last_names" />
 
         </LinearLayout>
