--- a/app/src/main/res/layout/comment_view.xml
+++ b/app/src/main/res/layout/comment_view.xml
@@ -13,6 +13,7 @@
         android:orientation="horizontal"
         android:padding="@dimen/comment_view_padding">
 
+
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/commentAvatarImageView"
             android:layout_width="@dimen/comment_view_avatar_size"
@@ -31,28 +32,31 @@
                 android:id="@+id/commentNameTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                tools:text="@tools:sample/full_names"/>
+                android:textSize="14sp"
+                tools:text="@tools:sample/full_names" />
 
             <TextView
                 android:id="@+id/commentEmailTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                tools:text="@tools:sample/full_names"/>
+                android:fontFamily="sans-serif-thin"
+                android:textSize="12sp"
+                tools:text="@tools:sample/full_names"  android:paddingBottom="12dp"/>
 
             <TextView
                 android:id="@+id/commentBodyTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                tools:text="@tools:sample/lorem/random"/>
+                android:textSize="12sp"
+                tools:text="@tools:sample/lorem/random" />
 
-            <TextView
+            <TextView android:paddingTop="12dp"
                 android:id="@+id/commentDateTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
+                android:fontFamily="sans-serif-thin"
+                android:gravity="end"
+                android:textSize="10sp" />
 
         </LinearLayout>
 
