--- a/app/src/main/res/layout/author_details_fragment.xml
+++ b/app/src/main/res/layout/author_details_fragment.xml
@@ -11,7 +11,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="@dimen/author_details_view_spacer"
             android:background="@color/author_details_background" />
 
         <com.michaellaguerre.symphony.ui.views.AuthorDetailView
@@ -43,20 +43,19 @@
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-
     </LinearLayout>
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        app:title="POST TITLE ferhjk fdlskj fgskjl fgdsjkl gfdsjlk gfdsjkl gdsjkl gfjks lgfdjk ls gfd jkslgfdskjlgfdjkslj gfdjk sgfd jks gfd ksl gfdjksl gfds" />
+        app:title="POST TITLE" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="24dp"
+        android:layout_margin="@dimen/author_details_fab_margin"
         android:src="@drawable/ic_mail"
         app:layout_anchor="@id/authorDetailsView"
         app:layout_anchorGravity="bottom|end" />
