--- a/app/src/main/res/layout/comment_view.xml
+++ b/app/src/main/res/layout/comment_view.xml
@@ -32,7 +32,7 @@
                 android:id="@+id/commentNameTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
+                android:textSize="@dimen/comment_view_name_size"
                 tools:text="@tools:sample/full_names" />
 
             <TextView
@@ -40,15 +40,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-thin"
-                android:paddingBottom="12dp"
-                android:textSize="12sp"
+                android:paddingBottom="@dimen/comment_view_email_bottom_padding"
+                android:textSize="@dimen/comment_view_email_size"
                 tools:text="@tools:sample/full_names" />
 
             <TextView
                 android:id="@+id/commentBodyTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="12sp"
+                android:textSize="@dimen/comment_view_username_size"
                 tools:text="@tools:sample/lorem/random" />
 
             <TextView
@@ -57,8 +57,8 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-thin"
                 android:gravity="end"
-                android:paddingTop="12dp"
-                android:textSize="10sp" />
+                android:paddingTop="@dimen/comment_view_date_top_padding"
+                android:textSize="@dimen/comment_view_date_size" />
 
         </LinearLayout>
 
