--- a/app/src/main/res/drawable/banner_gradient.xml
+++ b/app/src/main/res/drawable/banner_gradient.xml
@@ -3,7 +3,6 @@
     android:shape="rectangle">
     <gradient
         android:angle="270"
-        android:endColor="#000000"
-        android:startColor="#00000000" />
-    <corners android:radius="0dp" />
+        android:endColor="@color/post_view_overlay_bottom"
+        android:startColor="@color/post_view_overlay_top" />
 </shape>
