--- a/app/src/main/res/layout/no_data_view.xml
+++ b/app/src/main/res/layout/no_data_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -25,4 +25,4 @@
         android:textColor="@color/empty_state"
         android:textSize="@dimen/empty_state_view_message_size" />
 
-</merge>
+</LinearLayout>
