--- a/app/src/main/res/layout/authors_fragment.xml
+++ b/app/src/main/res/layout/authors_fragment.xml
@@ -6,7 +6,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" android:background="@color/background">
 
         <com.michaellaguerre.symphony.ui.views.EmptyStateView
             android:id="@+id/noData"
